Add Encounter/Starter Randomization